<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:fitsSystemWindows="true">
    <TextView android:id="@+id/text"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="16dp"
              android:layout_marginTop="16dp"
              android:text="@string/choose_sort_order"
              android:textColor="@color/black"
              android:textSize="16sp"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintTop_toTopOf="parent"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_artist_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text">
        <com.bilibili.magicasakura.widgets.TintImageView
            android:id="@+id/iv_artist_name"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@mipmap/wq"
            app:imageTint="@color/theme_color_primary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="parent"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="8dp"
                  android:layout_marginTop="8dp"
                  android:text="@string/sort_by_artist_name"
                  android:textColor="@color/black"
                  android:textSize="14sp"
                  app:layout_constraintLeft_toRightOf="@+id/iv_artist_name"
                  app:layout_constraintTop_toTopOf="parent"/>
        <com.bilibili.magicasakura.widgets.TintImageView
            android:id="@+id/iv_choose_1"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@mipmap/choose"
            android:visibility="invisible"
            app:imageTint="@color/theme_color_primary"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
        />
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_song_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_artist_name">
        <com.bilibili.magicasakura.widgets.TintImageView
            android:id="@+id/iv_song_number"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@mipmap/sort_by_song_number"
            app:imageTint="@color/theme_color_primary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
        />
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="8dp"
                  android:layout_marginTop="8dp"
                  android:text="@string/sort_by_song_number"
                  android:textColor="@color/black"
                  android:textSize="14sp"
                  app:layout_constraintLeft_toRightOf="@+id/iv_song_number"
                  app:layout_constraintTop_toTopOf="parent"/>
        <com.bilibili.magicasakura.widgets.TintImageView
            android:id="@+id/iv_choose_2"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@mipmap/choose"
            android:visibility="invisible"
            app:imageTint="@color/theme_color_primary"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
        />
    </android.support.constraint.ConstraintLayout>
    <View android:layout_width="0dp"
          android:layout_height="1dp"
          android:background="@color/gray"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>
    <View android:layout_width="1dp"
          android:layout_height="0dp"
          android:background="@color/gray"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>
    <View android:layout_width="0dp"
          android:layout_height="1dp"
          android:background="@color/gray"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"/>
    <View android:layout_width="1dp"
          android:layout_height="0dp"
          android:background="@color/gray"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>